--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,5 +1,5 @@
 <!-- Setup Google Analytics -->
-{% include head-custom-google-analytics.html %}
+<!-- {% include head-custom-google-analytics.html %} -->
 
 <!-- You can set your favicon here -->
 {% if site.favicon %}
