--- a/_includes/links-mobile.html
+++ b/_includes/links-mobile.html
@@ -11,8 +11,8 @@
         }
     </style> 
 
-    {%- for platform in site.sidebar %}
+<!---    {%- for platform in site.sidebar %}
     <nobr><a href="{{ platform.link }}" rel="me">{{ platform.name }}</a>
     {%- unless forloop.last %} / {% endunless %}</nobr>
     {%- endfor %}
-</div>
+</div> -->
