--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,7 +10,7 @@
       }
     </style>
     <ul class="link">
-      <!-- {%- for platform in site.sidebar %} -->
+       {%- for platform in site.sidebar %}
       <!-- <li><a href="{{ platform.link }}"><i class="{{ platform.icon }}"></i> {{ platform.name }}</a></li> -->
        <li><a href="{{ platform.link }}">{{ platform.icon }}&nbsp;{{ platform.name }}</a></li> 
       {%- endfor %}
