--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
           {% endif %}
 
           <!-- <p>{{ site.description | default: site.github.project_tagline }}</p> -->
-          <p>Economics and Finance PhD student @ UW Madison. </p>
+          <p>Economics and Finance PhD student at University of Wisconsin-Madison. </p>
 
           {% include sidebar.html %}
 
