--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,25 @@
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     <link rel="stylesheet" href="{{ "/assets/css/custom.css?v=" | append: site.github.build_revision | relative_url }}">
 
+    
+    <style>
+    a {
+        color: black !important;
+    }
+
+    a:visited {
+        color: black !important;
+    }
+
+    a:hover {
+        color: black !important;
+    }
+
+    a:active {
+        color: black !important;
+    }
+  </style>
+    
     {% if site.cdn.jsdelivr.enabled %}
       <link rel="preload" href="{{ assets_base_url }}{{ site.logo }}" as="image">
     {% else %}
